--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
      <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <title>LOL</title>
-   <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="generator.js"></script>
-        <script type="text/javascript" src="imagerezise.js"></script>
+   <script type="text/javascript" src="./jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="./generator.js"></script>
+        <script type="text/javascript" src="./imagerezise.js"></script>
     
     </head>
     
