--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
     <!--fuck optimization it's too fucking hard, now you get your multiples of the same thing sometimes with hadouken because I really can't be arsed it's fucking 1:30 I need sleep.-->
-     <link rel="stylesheet" type="text/css" href="style.css">
+     <link rel="stylesheet" type="text/css" href="./style.css">
     <meta charset="utf-8">
     <title>LOL</title>
    <script type="text/javascript" src="./jquery-3.2.1.min.js"></script>
+   <script> print("hello from index")</script>
     <script type="text/javascript" src="./generator.js"></script>
         <script type="text/javascript" src="./imagerezise.js"></script>
     
