--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>LOL</title>
    <script type="text/javascript" src="./jquery-3.2.1.min.js"></script>
-   <script> print("hello from index")</script>
+   <script> console.log("hello from index")</script>
     <script type="text/javascript" src="./generator.js"></script>
         <script type="text/javascript" src="./imagerezise.js"></script>
     
